--- a/build.gradle
+++ b/build.gradle
@@ -40,9 +40,11 @@ dependencies {
     compile "io.micronaut:runtime-groovy"
     compile "io.micronaut:inject"
     compile "io.micronaut:runtime"
+    compile "io.micronaut.configuration:hibernate-jpa"
     compileOnly "io.micronaut:inject-groovy"
     compileOnly "io.micronaut:inject-java"
     runtime "ch.qos.logback:logback-classic:1.2.3"
+    runtime  'com.h2database:h2:1.4.196'
     testCompile "io.micronaut:inject-groovy"
     testCompile("org.spockframework:spock-core:1.1-groovy-2.4") {
         exclude group: "org.codehaus.groovy", module: "groovy-all"
