--- a/build.gradle
+++ b/build.gradle
@@ -1,60 +1,63 @@
 buildscript {
-    repositories {
-        mavenCentral()
-        maven { url "https://plugins.gradle.org/m2/" }
-    }
-    dependencies {
-        classpath "com.github.jengelman.gradle.plugins:shadow:2.0.4"
-        classpath "io.spring.gradle:dependency-management-plugin:1.0.5.RELEASE"
-        classpath "net.ltgt.gradle:gradle-apt-plugin:0.15"
-    }
+  repositories {
+    mavenCentral()
+    maven { url "https://plugins.gradle.org/m2/" }
+  }
+  dependencies {
+    classpath "com.github.jengelman.gradle.plugins:shadow:2.0.4"
+    classpath "io.spring.gradle:dependency-management-plugin:1.0.5.RELEASE"
+    classpath "net.ltgt.gradle:gradle-apt-plugin:0.15"
+  }
 }
 
 version "0.1"
 group "micronaut.todo"
 
-apply plugin:"io.spring.dependency-management"
-apply plugin:"com.github.johnrengelman.shadow"
-apply plugin:"application"
-apply plugin:"groovy"
-apply plugin:"java"
-apply plugin:"net.ltgt.apt-eclipse"
-apply plugin:"net.ltgt.apt-idea"
+apply plugin: "io.spring.dependency-management"
+apply plugin: "com.github.johnrengelman.shadow"
+apply plugin: "application"
+apply plugin: "groovy"
+apply plugin: "java"
+apply plugin: "net.ltgt.apt-idea"
 
 
 repositories {
-    mavenLocal()
-    mavenCentral()
+  mavenLocal()
+  mavenCentral()
 }
 
 dependencyManagement {
-    imports {
-        mavenBom 'io.micronaut:bom:1.0.0-SNAPSHOT'
-    }
+  imports {
+    mavenBom 'io.micronaut:bom:1.0.0-SNAPSHOT'
+  }
 }
 
 dependencies {
-    annotationProcessor "io.micronaut:inject-java"
-    compile "io.micronaut:http-client"
-    compile "io.micronaut:http-server-netty"
-    compile "io.micronaut:runtime-groovy"
-    compile "io.micronaut:inject"
-    compile "io.micronaut:runtime"
-    compile "io.micronaut.configuration:hibernate-jpa"
-    compileOnly "io.micronaut:inject-groovy"
-    compileOnly "io.micronaut:inject-java"
-    runtime "ch.qos.logback:logback-classic:1.2.3"
-    runtime  'com.h2database:h2:1.4.196'
-    testCompile "io.micronaut:inject-groovy"
-    testCompile("org.spockframework:spock-core:1.1-groovy-2.4") {
-        exclude group: "org.codehaus.groovy", module: "groovy-all"
-    }
-    testCompile "junit:junit:4.12"
-    testCompile "io.micronaut:inject-java"
+  annotationProcessor "io.micronaut:inject-java"
+  compile "io.micronaut:http-client"
+  compile "io.micronaut:http-server-netty"
+  compile "io.micronaut:runtime-groovy"
+  compile "io.micronaut:inject"
+  compile "io.micronaut:runtime"
+  compileOnly "io.micronaut:inject-groovy"
+  compileOnly "io.micronaut:inject-java"
+  runtime "ch.qos.logback:logback-classic:1.2.3"
+  testCompile "io.micronaut:inject-groovy"
+  testCompile("org.spockframework:spock-core:1.1-groovy-2.4") {
+    exclude group: "org.codehaus.groovy", module: "groovy-all"
+  }
+  testCompile "junit:junit:4.12"
+  testCompile "io.micronaut:inject-java"
+
+  compile "io.micronaut.configuration:hibernate-gorm"
+  // Use Tomcat connection pool
+  runtime 'org.apache.tomcat:tomcat-jdbc:8.0.44'
+  // Use H2 database driver
+  runtime 'com.h2database:h2:1.4.196'
 }
 
 shadowJar {
-    mergeServiceFiles()
+  mergeServiceFiles()
 }
 
 mainClassName = "micronaut.todo.Application"
